--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.9.0",
-    "typescript": "5.0.2"
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
