--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "18.0.11",
     "date-fns": "^2.30.0",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^12.0.4",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
     "next": "13.2.4",
@@ -29,7 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "prisma": "^4.14.1",
+    "prisma": "^4.16.1",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
