--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^5.4.2",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -18,7 +18,7 @@
     "eslint-config-next": "13.2.4",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
-    "next": "13.2.4",
+    "next": "^13.5.4",
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
@@ -29,7 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "prisma": "^4.14.1",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
